// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScheduleContainer should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <withRouter(ScheduleContainer)
    admin={true}
    api={
        Object {
            "getIndividualSchedules": [Function],
          }
    }
    currentUser={
        Object {
            "staff_id": 3,
          }
    }
    deleteFromSchedule={[Function]}
    editSchedule={[Function]}
    location={
        Object {
            "pathname": "/schedule/ogden",
          }
    }
    schedule={
        Array [
            Object {
              "ass_bar_manager": true,
              "bar_manager": true,
              "barbacks": 1,
              "bartenders": 1,
              "date": "Jul 20, 2018",
              "event_id": 3,
              "name": "Billy Prince Billy",
              "staff": Array [
                Object {
                  "ass_bar_manager": true,
                  "bar_manager": true,
                  "barback": false,
                  "bartender": true,
                  "beer_bucket": false,
                  "google_id": "1pLSNLEaSVT7hvRa5q4Vyy37IIN1",
                  "name": "TK",
                  "staff_id": 5,
                },
                Object {
                  "ass_bar_manager": true,
                  "bar_manager": false,
                  "barback": false,
                  "bartender": true,
                  "beer_bucket": false,
                  "google_id": "1pLSNLEaSVT7hvRa5q4Vyy37IIN2",
                  "name": "Jared",
                  "staff_id": 2,
                },
                Object {
                  "ass_bar_manager": false,
                  "bar_manager": false,
                  "barback": false,
                  "bartender": true,
                  "beer_bucket": false,
                  "google_id": "1pLSNLEaSVT7hvRa5q4Vyy37IIN1",
                  "name": "Jesse",
                  "staff_id": 3,
                },
                Object {
                  "ass_bar_manager": false,
                  "bar_manager": false,
                  "barback": true,
                  "bartender": false,
                  "beer_bucket": false,
                  "google_id": "1pLSNLEaSVT7hvRa5q4Vyy37IIN2",
                  "name": "Ross",
                  "staff_id": 4,
                },
              ],
              "venue": "Ogden Theatre",
            },
          ]
    }
    staff={Array []}
    unscheduledEvents={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": [Function],
    },
    "ref": null,
    "rendered": [Function],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": [Function],
      },
      "ref": null,
      "rendered": [Function],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ScheduleContainer should match the snapshot when there are no unscheduled events 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <withRouter(ScheduleContainer)
    admin={true}
    api={
        Object {
            "getIndividualSchedules": [Function],
          }
    }
    currentUser={
        Object {
            "staff_id": 3,
          }
    }
    deleteFromSchedule={[Function]}
    editSchedule={[Function]}
    event={
        Object {
            "event_id": 1,
          }
    }
    location={
        Object {
            "pathname": "/unscheduled-events",
          }
    }
    schedule={
        Array [
            Object {
              "ass_bar_manager": true,
              "bar_manager": true,
              "barbacks": 1,
              "bartenders": 1,
              "date": "Jul 20, 2018",
              "event_id": 3,
              "name": "Billy Prince Billy",
              "staff": Array [
                Object {
                  "ass_bar_manager": true,
                  "bar_manager": true,
                  "barback": false,
                  "bartender": true,
                  "beer_bucket": false,
                  "google_id": "1pLSNLEaSVT7hvRa5q4Vyy37IIN1",
                  "name": "TK",
                  "staff_id": 5,
                },
                Object {
                  "ass_bar_manager": true,
                  "bar_manager": false,
                  "barback": false,
                  "bartender": true,
                  "beer_bucket": false,
                  "google_id": "1pLSNLEaSVT7hvRa5q4Vyy37IIN2",
                  "name": "Jared",
                  "staff_id": 2,
                },
                Object {
                  "ass_bar_manager": false,
                  "bar_manager": false,
                  "barback": false,
                  "bartender": true,
                  "beer_bucket": false,
                  "google_id": "1pLSNLEaSVT7hvRa5q4Vyy37IIN1",
                  "name": "Jesse",
                  "staff_id": 3,
                },
                Object {
                  "ass_bar_manager": false,
                  "bar_manager": false,
                  "barback": true,
                  "bartender": false,
                  "beer_bucket": false,
                  "google_id": "1pLSNLEaSVT7hvRa5q4Vyy37IIN2",
                  "name": "Ross",
                  "staff_id": 4,
                },
              ],
              "venue": "Ogden Theatre",
            },
          ]
    }
    staff={Array []}
    unscheduledEvents={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": [Function],
    },
    "ref": null,
    "rendered": [Function],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": [Function],
      },
      "ref": null,
      "rendered": [Function],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
